--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,23 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button, input {
+  box-shadow: inset 0 0 5px black;
+  transition: 0.2px;
+}
+
+button:focus, input:focus {
+  box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.05);
+}  
+
+button:active { 
+  box-shadow: 0 0 5px black;
 }
