--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,19 @@ code {
     monospace;
 }
 
-button, input {
+input {
   box-shadow: inset 0 0 5px black;
-  transition: 0.2px;
+  transition: 0.2s;
 }
 
-button:focus, input:focus {
-  box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.05);
+input:focus {
+  box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.5);
 }  
+
+button {
+  box-shadow: inset 0 0 10px black;
+  transition: 0.2s all;
+}
 
 button:active { 
   box-shadow: 0 0 5px black;
